--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-nothing to see here.
+<html>
+  <head>
+  <meta name="verification" content="c58d04b17fe9d295b050a3ca07b09046" />
+  </head>
+</html>
