--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@ Although you can use them, for a more unique website, replace these images with 
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="ttp://www.quackit.com/html/templates/download/bootstrap/business-2/js/jquery-1.11.3.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="ttp://www.quackit.com/html/templates/download/bootstrap/business-2/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
+    <script src="ttp://www.quackit.com/html/templates/download/bootstrap/business-2/js/jquery.easing.min.js"></script>
     
     <!-- Custom Javascript -->
-    <script src="js/custom.js"></script>
+    <script src="ttp://www.quackit.com/html/templates/download/bootstrap/business-2/js/custom.js"></script>
 
 </body>
 
