--- a/index.html
+++ b/index.html
@@ -53,16 +53,7 @@ Although you can use them, for a more unique website, replace these images with 
         </div><!-- /.container -->
     </nav>
 
-	<!-- Header -->
-    <header>
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1>Dramatically Engage</h1>
-                <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-                <a href="#" class="btn btn-primary btn-lg">Engage Now</a>
-            </div>
-        </div>
-    </header>
+
 
 	<!-- Intro Section -->
     <section class="intro">
@@ -70,8 +61,8 @@ Although you can use them, for a more unique website, replace these images with 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                 	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
-                    <h2 class="section-heading">Completely synergize resource taxing relationships</h2>
-                    <p class="text-light">Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                    <h2 class="section-heading">Ihre kompetente Unternehmensberatung</h2>
+                    <p class="text-light">Kontaktieren Sie uns noch heute und finden Sie heraus, was ACKONSULT für Sie tun kann.</p>
                 </div>
             </div>
         </div>
@@ -87,9 +78,9 @@ Although you can use them, for a more unique website, replace these images with 
     	<!-- Contact Us -->
         <div class="contact">
         	<div class="container">
-				<h2 class="section-heading">Contact Us</h2>
-				<p><span class="glyphicon glyphicon-earphone"></span><br> +1(23) 456 7890</p>
-				<p><span class="glyphicon glyphicon-envelope"></span><br> info@example.com</p>
+				<h2 class="section-heading">Kontakt</h2>
+				<p><span class="glyphicon glyphicon-earphone"></span><br> +49 7151 833 900 0</p>
+				<p><span class="glyphicon glyphicon-envelope"></span><br> info@ackonsult.com</p>
         	</div>
         </div>
         	
