--- a/index-wolf.html
+++ b/index-wolf.html
@@ -25,8 +25,8 @@
         <div class="container fluid-container header-content content-area">
           <span class="header-icon glyphicon glyphicon-heart-empty"></span>
           <div class="header-title">
-            <h1>I'm Mister Wolf</h1>
-            <h3>I fix problems</h3>
+            <h1>ACKONSULT</h1>
+            <h3>AUTOMATION FOR LIFE</h3>
           </div>
         </div>
         
