--- a/index-wolf.html
+++ b/index-wolf.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mister Wolf</title>
+    <title>ACKONSULT GmbH</title>
 
     <!-- CSS and fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
