--- a/index-wolf.html
+++ b/index-wolf.html
@@ -44,9 +44,6 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenu1">
             <li>
-              <a href="#"><b>ACKONSULT</b></a>
-            </li>
-            <li>
               <a href="javascript:void(0);" onclick="scrollToAnchor('section-1')">What We Do</a>
             </li>
             <li>
@@ -67,6 +64,7 @@
         <div class="header-menu-content">
           <div class="menu-logo">
             <span class="header-icon glyphicon glyphicon-heart-empty"></span>
+            ACKONSULT
           </div>
           <ul>
             <li>
@@ -80,9 +78,6 @@
             </li>
             <li>
                 <a href="javascript:void(0);" onclick="scrollToAnchor('section-4')">Contact</a>
-            </li>
-            <li>
-              <a href="dark/index.html" >Black Wolf</a>
             </li>
           </ul>
         </div>
