--- a/index-wolf.html
+++ b/index-wolf.html
@@ -64,9 +64,11 @@
         <div class="header-menu-content">
           <div class="menu-logo">
             <span class="header-icon glyphicon glyphicon-heart-empty"></span>
-            ACKONSULT
           </div>
           <ul>
+            <li>
+              <a href="#" class="hide-item">ACKONSULT</a>
+            </li>
             <li>
               <a href="javascript:void(0);" onclick="scrollToAnchor('section-1')">What We Do</a>
             </li>
