--- a/index-wolf.html
+++ b/index-wolf.html
@@ -355,7 +355,7 @@
                   <a href="javascript:void(0);" onclick="scrollToAnchor('top')"><span class="glyphicon glyphicon-menu-up"></span></a>
                 </div>
                 <!-- Contact Us section -->
-                <h1>Contact Us</h1>
+                <h1>Kontakt</h1>
                 <h5>It's thirty minutes away. I'll be there in ten.</h5>
                 <div class="row">
                   <div class="col-sm-12 panel">
@@ -386,7 +386,10 @@
         </ul>
       </div>
       <div class="content-area footer">
-        Template by <a href="http://bangersandflash.net" target="_blank">Jassa</a> and <a href="http://nathanlovesdesign.com" target="_blank">Nathan</a>
+        ACKONSULT GmbH, Schillerstraße 29/1, 71404 Korb. Vertreten durch den Geschäftsführer: Jörg Ackermann<br>
+Telefon: 07151 - 833 900 1, Telefax: 07151 - 833 900 9, E-Mail: info@ackonsult.com<br>
+Eingetragen im Handelsregister Stuttgart, HRB 123456. Sitz der Gesellschaft: Stuttgart<br>
+Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: DE301352899
       </div>
     </div>
 
