--- a/index-agency.html
+++ b/index-agency.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-        <title>PHLY</title>
+        <title>ACKONSULT<title>
         <meta name="description" content="The description should optimally be between 150-160 characters.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Madeon08">
@@ -56,8 +56,8 @@
 
 			<div class="content">
 
-				<h1 class="text-intro opacity-0">Hello World!<br>
-					Phly Inc. is about to start...</h1>
+				<h1 class="text-intro opacity-0">ACKONSULT<br>
+					Smart Automation for Life.</h1>
 
 				<h2 class="text-intro opacity-0">Perfect and awesome template to present your future agency or business.<br>
 					Get notified when our Agency launches!</h2>
