--- a/index-agency.html
+++ b/index-agency.html
@@ -30,12 +30,14 @@
 	<body>
 
 		<!-- Page preloader -->
+<!-- 
 		<div id="loading">
 			<div id="preloader">
 				<span></span>
 				<span></span>
 			</div>
 		</div>
+ -->
 
 		<!-- Overlay and Star effect -->
 		<div class="global-overlay">
@@ -52,23 +54,22 @@
 		<section id="left-side">
 
 			<!-- Your logo -->
-			<img src="img/logo.png" alt="" class="brand-logo" />
+			<!-- <img src="img/logo.png" alt="" class="brand-logo" /> -->
 
 			<div class="content">
 
 				<h1 class="text-intro opacity-0">ACKONSULT<br>
 					Smart Automation for Life.</h1>
 
-				<h2 class="text-intro opacity-0">Perfect and awesome template to present your future agency or business.<br>
-					Get notified when our Agency launches!</h2>
+				<h2 class="text-intro opacity-0">Wir bieten Ihnen einen Rundum-Service für die Automatisierung Ihrer Wohn- oder Geschäftsimmobilie, egal ob Neubau oder Modernisierung.</h2>
 
 				<nav>
 					<ul>
 						<li>
-							<a href="#" id="open-more-info" data-target="right-side" class="light-btn text-intro opacity-0">More Informations</a>
+							<a href="#" id="open-more-info" data-target="right-side" class="light-btn text-intro opacity-0">Mehr erfahren</a>
 						</li>
 						<li>
-							<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">Notify Me!</a>
+							<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">Kontakt</a>
 						</li>
 					</ul>
 				</nav>
