--- a/index-agency.html
+++ b/index-agency.html
@@ -30,15 +30,7 @@
 	
 	<body>
 
-		<!-- Page preloader -->
-<!-- 
-		<div id="loading">
-			<div id="preloader">
-				<span></span>
-				<span></span>
-			</div>
-		</div>
- -->
+
  
  		<!-- Let it snow! -->
 		<canvas id="xmas" style="display: none;"></canvas>
@@ -64,19 +56,19 @@
 
 			<div class="content">
 
-				<h1 class="text-intro opacity-0">ACKONSULT</h1>
+				<h1 class="">ACKONSULT</h1>
 					
-				<h1 style="font-weight: 300;" class="text-intro opacity-0">Smart Automation for Life.</h1>		
+				<h1 style="font-weight: 300;" class="">Smart Automation for Life.</h1>		
 
-				<h2 class="text-intro opacity-0">Wir bieten Ihnen einen Rundum-Service für die Automatisierung Ihrer Wohn- oder Geschäftsimmobilie, egal ob Neubau oder Modernisierung.</h2>
+				<h2 class="">Wir bieten Ihnen einen Rundum-Service für die Automatisierung Ihrer Wohn- oder Geschäftsimmobilie, egal ob Neubau oder Modernisierung.</h2>
 
 				<nav>
 					<ul>
 						<li>
-							<a href="#" id="open-more-info" data-target="right-side" class="light-btn text-intro opacity-0">MEHR ERFAHREN</a>
+							<a href="#" id="open-more-info" data-target="right-side" class="light-btn ">MEHR ERFAHREN</a>
 						</li>
 						<li>
-							<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">KONTAKT</a>
+							<a data-dialog="somedialog" class="action-btn trigger  ">KONTAKT</a>
 						</li>
 					</ul>
 				</nav>
