--- a/index-agency.html
+++ b/index-agency.html
@@ -68,7 +68,7 @@
 							<a href="#" id="open-more-info" data-target="right-side" class="light-btn ">MEHR ERFAHREN</a>
 						</li>
 						<li>
-							<a data-dialog="somedialog" class="action-btn trigger  ">HOTLINE: 0800 100 3000</a>
+							<a data-dialog="somedialog" class="action-btn trigger  ">0800 100 3000</a>
 						</li>
 					</ul>
 				</nav>
