--- a/index-agency.html
+++ b/index-agency.html
@@ -6,7 +6,8 @@
         <title>ACKONSULT</title>
         <meta name="description" content="The description should optimally be between 150-160 characters.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Madeon08">
+        <meta name="author" content="ACKONSULT">
+        <meta name="format-detection" content="telephone=no">
 
         <!-- ================= Favicon ================== -->
         <!-- Standard -->
@@ -68,7 +69,7 @@
 							<a href="#" id="open-more-info" data-target="right-side" class="light-btn ">MEHR ERFAHREN</a>
 						</li>
 						<li>
-							<a data-dialog="somedialog" class="action-btn trigger  ">0800 100 3000</a>
+							<a data-dialog="somedialog" class="action-btn trigger  ">HOTLINE: 0800 100 3000</a>
 						</li>
 					</ul>
 				</nav>
