--- a/index-agency.html
+++ b/index-agency.html
@@ -69,7 +69,7 @@
 							<a href="#" id="open-more-info" data-target="right-side" class="light-btn ">MEHR ERFAHREN</a>
 						</li>
 						<li>
-							<a data-dialog="somedialog" class="action-btn trigger  ">HOTLINE: 0800 100 3000</a>
+							<a href="#" class="action-btn trigger  ">HOTLINE: 0800 100 3000</a>
 						</li>
 					</ul>
 				</nav>
@@ -80,7 +80,7 @@
 			<div class="useful-links">
 
 				<a href="#" class="info-link">&copy 2017 ACKONSULT GmbH</a> <span class="separator-link"></span>
-				<a href="#" class="info-link">Impressum</a> <span class="separator-link"></span>
+				<a  data-dialog="somedialog" class="info-link">Impressum</a> <span class="separator-link"></span>
 
 				<a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
 				<a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
