--- a/index-agency.html
+++ b/index-agency.html
@@ -69,7 +69,7 @@
 							<a href="#" id="open-more-info" data-target="right-side" class="light-btn ">MEHR ERFAHREN</a>
 						</li>
 						<li>
-							<a href="#" class="action-btn trigger  ">HOTLINE: 0800 100 3000</a>
+							<a href="#" class="action-btn trigger  "><i class="fa fa-phone">&nbsp;&nbsp;</i>0800 100 3000</a>
 						</li>
 					</ul>
 				</nav>
