--- a/index-agency.html
+++ b/index-agency.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
         <title>ACKONSULT</title>
         <meta name="description" content="The description should optimally be between 150-160 characters.">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="author" content="ACKONSULT">
         <meta name="format-detection" content="telephone=no">
 
