--- a/index-agency.html
+++ b/index-agency.html
@@ -458,6 +458,10 @@
 		 //if (data.current.condition.text.indexOf("rain") > -1)  $( "#rainy" ).show();
 		 //if (data.current.condition.text.indexOf("Rain") > -1)  $( "#rainy" ).show();		
 	});
+	
+	document.addEventListener('gesturestart', function (e) {
+    e.preventDefault();
+});
  
 
     </script>
