--- a/index-agency.html
+++ b/index-agency.html
@@ -102,6 +102,9 @@
 				<span class="separator"></span>
 
 				<h3>Unsere Leistungen</h3>
+				
+				<p>Hi, I'm Phly, your new template ready to use. Handmade, precisely built with the famous Bootstrap Framework. Bonjour, je suis Phly, votre nouveau template prêt à l'emploi. Fait main, construit avec précision grâce au célèbre Framework Bootstrap. </p>
+
 
 				<div class="row">
                         
