--- a/index-agency.html
+++ b/index-agency.html
@@ -105,7 +105,7 @@
 				
 				<p>Hi, I'm Phly, your new template ready to use. Handmade, precisely built with the famous Bootstrap Framework. Bonjour, je suis Phly, votre nouveau template prêt à l'emploi. Fait main, construit avec précision grâce au célèbre Framework Bootstrap. </p>
 
-				<p></p>
+				<p>&nbsp;</p>
 
 				<div class="row">
                         
