--- a/index-agency.html
+++ b/index-agency.html
@@ -65,7 +65,7 @@
 							<a href="#" id="open-more-info" data-target="right-side" class="light-btn ">MEHR ERFAHREN</a>
 						</li>
 						<li>
-							<a href="tel:+498001003000" class="action-btn trigger  "><i class="fa fa-phone">&nbsp;&nbsp;</i>0800 100 3000</a>
+							<a href="tel:+498001003000" class="action-btn trigger  "><i class="fa fa-phone">&nbsp;&nbsp;</i>07181 492 107 0</a>
 						</li>
 					</ul>
 				</nav>
@@ -285,7 +285,7 @@
 					<h4>Impressum</h4>
 							
         <p><b>ACMN GmbH</b><br>Schillerstraße 29/1, 71404 Korb</p><br>
-        <p>Telefon: 07151 / 833 900 0<br>Telefax: 07151 / 833 900 9</p><br>
+        <p>Telefon: 07181 / 492 107 0<br>Telefax: 07181 / 492 107 9</p><br>
         <p>Vertreten durch den Geschäftsführer:<br> Jörg Ackermann </p><br>
         <p>Eingetragen im Handelsregister Mannheim, HRB xxxxxx. Sitz der Gesellschaft: Stuttgart</p> <br>
         <p>Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: DExxxxxxxxx</p> 
