--- a/index-agency.html
+++ b/index-agency.html
@@ -234,8 +234,8 @@
 
                     <div class="col-xs-12 col-sm-4 col-lg-4 item-map">
                         <div class="contact-item"><i class="icon ion-ios-telephone"></i>
-                            <p>Telefon: 07151 / 833 900 - 0
-                                <br>Fax: 07151 / 833 900 - 9</p>
+                            <p>Telefon: 07181 492 107 0
+                                <br>Telefax: 07181 492 107 9</p>
                         </div>
                     </div>
 
