--- a/index-agency.html
+++ b/index-agency.html
@@ -78,7 +78,7 @@
 				<a href="#" class="info-link">&copy 2017 ACMN GmbH</a> <span class="separator-link"></span>
 				<a  data-dialog="somedialog" class="info-link">Impressum</a> <span class="separator-link"></span>
 
-				<a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.facebook.com/ACMNGmbH/" target="_blank"><i class="fa fa-facebook"></i></a>
 				<a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
 
 			</div>
