--- a/index-agency.html
+++ b/index-agency.html
@@ -32,6 +32,11 @@
 	</head>
 	
 	<body>
+	
+	<script>
+if (!(window.location.host.startsWith("127.0.0.1")) && (window.location.protocol != "https:"))
+    window.location.protocol = "https";
+</script>
 
 
 		<!-- Overlay and Star effect -->
