--- a/index-agency.html
+++ b/index-agency.html
@@ -292,7 +292,7 @@ if (!(window.location.host.startsWith("127.0.0.1")) && (window.location.protocol
         <p><b>ACMN GmbH</b><br>Schillerstraße 29/1, 71404 Korb</p><br>
         <p>Telefon: 07181 / 492 107 0<br>Telefax: 07181 / 492 107 9</p><br>
         <p>Vertreten durch den Geschäftsführer:<br> Jörg Ackermann </p><br>
-        <p>Eingetragen im Handelsregister Mannheim, HRB xxxxxx. Sitz der Gesellschaft: Stuttgart</p> <br>
+        <p>Eingetragen im Handelsregister beim Amtsgericht Stuttgart, HRB xxxxxx. Sitz der Gesellschaft: Stuttgart</p> <br>
         <p>Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: DExxxxxxxxx</p> 
 
 				</div>
